crates/sid-widgets/tests/snapshots/modal__modal_choice_second_selected.snap
---
source: crates/sid-widgets/tests/modal.rs
expression: s
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ ✦ Pick Algorithm ────────────────────────────┐                
                │  algorithm                                   │                
                │> ( ) Ed25519  (●) RSA-4096  ( ) ECDSA-256    │                
                │                                              │                
                │  [ Enter: Save ]   [ Esc: Cancel ]           │                
                │                                              │                
                └──────────────────────────────────────────────┘
