crates/sid-widgets/tests/snapshots/modal__modal_display_multiline_body.snap
---
source: crates/sid-widgets/tests/modal.rs
expression: s
---
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ ✦ Help — Demo ───────────────────────────────┐                
                │  keys                                        │                
                │  Demo:                                       │                
                │    N: new                                    │                
                │    D: delete                                 │                
                │    R: rename                                 │                
                │                                              │                
                │  Global:                                     │                
                │    Ctrl+Q: quit                              │                
                │    Ctrl+F: palette                           │                
                │                                              │                
                │  Esc closes.                                 │                
                │  [ Enter: Save ]   [ Esc: Cancel ]           │                
                │                                              │                
                └──────────────────────────────────────────────┘
