crates/sid-widgets/tests/snapshots/modal__modal_password_bullets.snap
---
source: crates/sid-widgets/tests/modal.rs
expression: s
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ ✦ Set Password ──────────────────────────────┐                
                │  passphrase                                  │                
                │> •••••••••                                   │                
                │                                              │                
                │  [ Enter: Save ]   [ Esc: Cancel ]           │                
                │                                              │                
                └──────────────────────────────────────────────┘
