crates/sid-widgets/tests/snapshots/modal__modal_three_text_first_focused.snap
---
source: crates/sid-widgets/tests/modal.rs
expression: s
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ ✦ Three Text Fields ─────────────────────────┐                
                │  alias                                       │                
                │> prod                                        │                
                │  host                                        │                
                │  prod.example.com                            │                
                │  user                                        │                
                │  root                                        │                
                │                                              │                
                │  [ Enter: Save ]   [ Esc: Cancel ]           │                
                │                                              │                
                └──────────────────────────────────────────────┘
